Github social auth plumbing example

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,10 @@
+# ExpressJS server port
 SERVER_PORT=8080
 
+# App secret used to sign JWT tokens
 APP_SECRET=MY_SECRET
+
+# GITHUB 
+GITHUB_CLIENT_ID=get_your_own,
+GITHUB_CLIENT_SECRET=get_your_own,
+GITHUB_CALLBACK_URL=http://127.0.0.1:8080/auth/github/callback
