--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "express": "^4.17.2",
     "jsonwebtoken": "^8.5.1",
     "passport": "^0.5.2",
+    "passport-github": "^1.1.0",
     "passport-jwt": "^4.0.0"
   },
   "devDependencies": {
